[package]
name = "zstagbrowse"
version = "0.0.0"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/zstagbrowse"

[dependencies]
anyhow = "1.0.1"
boolinator = "2.4"
clap = "~2.33.0"
path-clean = "0.1"
pathdiff = "0.1"
symlink = "0.1"
walkdir = "2.2.9"
persy = { version = "0.6.2", optional = true }
xattr = { version = "0.2.2", optional = true }

[features]
default = ["persy", "xattr"]

[lib]
name = "zstags"
path = "src/lib.rs"

[profile.release]
lto = true
